# web2.0_homework_7

./: config.ini  pyproject.toml  query_main.py
alembic/versions/: ec5457cb9fd6_init.py
database/: db.py  models.py
seed/: grades.py  groups.py  lecturers.py  students.py  subjects.py
